@@ -1,3 +1,4 @@
+* Better translation dialog box
 * Add the richtext widget for WYSIWYG Editor on text fields
 * Add a record pool to prefetch more records
 * Add Time widget
